--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -158,7 +158,7 @@
 
                                 <div class="col-lg-12">
 
-                                    <p class="text-color">
+                                    <p class="text-color knowledge-text-block">
                                         Front-End is like the face of your website, shaping its appearance and handling user interactions. Think of CSS, Javascript, and 
                                         smart website design as the stylish clothes and a great hairstyle – they're what make your website look and feel fantastic.
                                      </p>
@@ -173,15 +173,15 @@
                                 <div class="col-lg-12">
 
                                     <div class="row">
-                                        <div class="col-3">
+                                        <div class="col-lg-2 col-md-2 col-3">
                                             <img src="/Assets/images/SVGs/html5-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
-                                        <div class="col-3">
+                                        <div class="col-lg-2 col-md-2 col-3">
                                             <img src="/Assets/images/SVGs/css3-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
-                                        <div class="col-3">
+                                        <div class="col-lg-2 col-md-2 col-3">
                                             <img src="/Assets/images/SVGs/javascript-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
                                     </div>
@@ -204,7 +204,7 @@
                                 </div>
 
                                 <div class="col-lg-12">
-                                    <p class="text-color">
+                                    <p class="text-color knowledge-text-block">
                                         Back-End serves as the heart and brain of your website, managing and powering everything you see. Website security acts as the immune system, 
                                         ensuring a safe and secure environment. The brain, represented by controllers, ensures seamless connections and smooth navigation to where you need to go!
                                     </p>
@@ -217,20 +217,24 @@
                                 <div class="col-lg-12">
 
                                     <div class="row">
-                                        <div class="col-3">
+                                        <div class="col-lg-2 col-md-2 col-3">
                                             <img src="/Assets/images/SVGs/c-sharp-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
-                                        <div class="col-3">
+                                        <div class="col-lg-2 col-md-2 col-3">
                                             <img src="/Assets/images/SVGs/javascript-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
-                                        <div class="col-3">
+                                        <div class="col-lg-2 col-md-2 col-3">
                                             <img src="/Assets/images/SVGs/node-js-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
-                                        <div class="col-3">
+                                        <div class="col-lg-2 col-md-2 col-3">
                                             <img src="/Assets/images/SVGs/express-js-grey.svg" class="img-fluid" alt="Responsive Image" />
+                                        </div>
+
+                                        <div class="col-lg-2 col-md-2 col-3">
+                                            <img src="/Assets/images/SVGs/mongodb-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
                                     </div>
 
@@ -252,7 +256,7 @@
                                 </div>
 
                                 <div class="col-lg-12">
-                                    <p class="text-color">
+                                    <p class="text-color knowledge-text-block">
                                         Other skills in coding are akin to additional features in a person: social skills, general interactions, etc. They encompass frameworks, code editors, 
                                         or handy tools that make coding easier, more efficient, or interconnected across multiple devices. It's like having those extra traits that enhance your 
                                         overall coding experience!
@@ -266,16 +270,20 @@
                                 <div class="col-lg-12">
 
                                     <div class="row">
-                                        <div class="col-3">
+                                        <div class="col-lg-2 col-md-2 col-3">
                                             <img src="/Assets/images/SVGs/dotnet-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
-                                        <div class="col-3">
-                                            <img src="/Assets/images/SVGs/git-grey.svg" class="img-fluid" alt="Responsive Image" />
+                                        <div class="col-lg-2 col-md-2 col-3">
+                                            <img src="/Assets/images/SVGs/visual-studio-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
-                                        <div class="col-3">
-                                            <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                        <div class="col-lg-2 col-md-2 col-3">
+                                            <img src="/Assets/images/SVGs/visual-studio-code-grey.svg" class="img-fluid" alt="Responsive Image" />
+                                        </div>
+
+                                        <div class="col-lg-2 col-md-2 col-3">
+                                            <img src="/Assets/images/SVGs/git-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
                                     </div>
 
