--- a/PortfolioProjectMVC/Views/Shared/_Layout.cshtml
+++ b/PortfolioProjectMVC/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
 
     <footer class="border-top footer text-muted" style="background-color: var(--blue)">
         <div class="container">
-            &copy; 2023 - Samuel Cole's Portfolio - Icons by <a href="https://icons8.com/">Icons8</a>
+            &copy; 2023 - Samuel Cole's Portfolio - Icons by <a href="https://icons8.com/" target="_blank">Icons8</a> & <a href="https://www.svgrepo.com/" target="_blank">SVG Repo</a>
         </div>
     </footer>
 
