more ui upgrades

--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -173,15 +173,15 @@
                                 <div class="col-lg-12">
 
                                     <div class="row">
-                                        <div class="col-lg-2 col-md-2 col-3">
+                                        <div class="col-lg-2 col-md-2 col-sm-2 col-2">
                                             <img src="/Assets/images/SVGs/html5-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
-                                        <div class="col-lg-2 col-md-2 col-3">
+                                        <div class="col-lg-2 col-md-2 col-sm-2 col-2">
                                             <img src="/Assets/images/SVGs/css3-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
-                                        <div class="col-lg-2 col-md-2 col-3">
+                                        <div class="col-lg-2 col-md-2 col-sm-2 col-2">
                                             <img src="/Assets/images/SVGs/javascript-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
                                     </div>
@@ -217,23 +217,23 @@
                                 <div class="col-lg-12">
 
                                     <div class="row">
-                                        <div class="col-lg-2 col-md-2 col-3">
+                                        <div class="col-lg-2 col-md-2 col-sm-2 col-2">
                                             <img src="/Assets/images/SVGs/c-sharp-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
-                                        <div class="col-lg-2 col-md-2 col-3">
+                                        <div class="col-lg-2 col-md-2 col-sm-2 col-2">
                                             <img src="/Assets/images/SVGs/javascript-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
-                                        <div class="col-lg-2 col-md-2 col-3">
+                                        <div class="col-lg-2 col-md-2 col-sm-2 col-2">
                                             <img src="/Assets/images/SVGs/node-js-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
-                                        <div class="col-lg-2 col-md-2 col-3">
+                                        <div class="col-lg-2 col-md-2 col-sm-2 col-2">
                                             <img src="/Assets/images/SVGs/express-js-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
-                                        <div class="col-lg-2 col-md-2 col-3">
+                                        <div class="col-lg-2 col-md-2 col-sm-2 col-2">
                                             <img src="/Assets/images/SVGs/mongodb-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
                                     </div>
@@ -270,19 +270,19 @@
                                 <div class="col-lg-12">
 
                                     <div class="row">
-                                        <div class="col-lg-2 col-md-2 col-3">
+                                        <div class="col-lg-2 col-md-2 col-sm-2 col-2">
                                             <img src="/Assets/images/SVGs/dotnet-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
-                                        <div class="col-lg-2 col-md-2 col-3">
+                                        <div class="col-lg-2 col-md-2 col-sm-2 col-2">
                                             <img src="/Assets/images/SVGs/visual-studio-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
-                                        <div class="col-lg-2 col-md-2 col-3">
+                                        <div class="col-lg-2 col-md-2 col-sm-2 col-2">
                                             <img src="/Assets/images/SVGs/visual-studio-code-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
-                                        <div class="col-lg-2 col-md-2 col-3">
+                                        <div class="col-lg-2 col-md-2 col-sm-2 col-2">
                                             <img src="/Assets/images/SVGs/git-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
                                     </div>
