first attempt at fixing hover animation.

--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -7,6 +7,17 @@
 @inject Microsoft.Extensions.Configuration.IConfiguration Configuration
 
 <!-- Primary area that I will be writing my HTML -->
+
+<!-- 
+
+<div class="popup-box" id="popupBox">
+
+</div>
+
+ -->
+
+
+
 <div style="background-color: white; padding-top: 100px;">
 
     <div style="z-index: 2; position: absolute; top: 100px; left: 40px;">
@@ -313,15 +324,15 @@
             <div class="project-block-formatting project-block-margins" style=" border-bottom: 2px solid var(--blue);">
                 <div class="row row-formatting">
 
-                    <div class="section col-md-6 margin-remover">
+                    <div class="section col-md-6 margin-remover">   
 
-                        <div class="project-image-size top-image" id="project-images">
-                            <img class="img-fluid image-styles rotate-top" src="/Assets/images/Placeholders/amogus.jpg" id="top-image">
-                        </div>
+                            <div class="project-image-size top-image" id="project-images">
+                                <img class="img-fluid image-styles rotate-top" src="/Assets/images/Placeholders/amogus.jpg" id="topImage">
+                            </div>
 
-                        <div class="project-image-size bottom-image" id="project-images">
-                            <img class="img-fluid image-styles rotate-bottom" src="/Assets/images/Placeholders/pepe.jpg" id="bottom-image">
-                        </div>
+                            <div class="project-image-size bottom-image" id="project-images">
+                                <img class="img-fluid image-styles rotate-bottom" src="/Assets/images/Placeholders/pepe.jpg" id="bottomImage">
+                            </div>
                         
                     </div>
 
@@ -362,6 +373,7 @@
                 
                     <div class="section col-md-6 order-2 order-md-1 margin-remover">
                         <div class=" project-text-section-size" style="background-color: white;">
+
                             <div class="project-titles">
                                 <h1 class="h1 project-titles">Project Title</h1>
                                 <p class="project-text">
@@ -371,6 +383,7 @@
                                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
                                 </p>
                             </div>
+
                             <h1 class="h1 technology-titles">Technology</h1>
                                 <div class="row">
                                     <div class="col-3 col-md-1_5">
@@ -618,8 +631,14 @@
 
                                 
                                     <div class="d-flex ms-auto">
-                                        <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" style="max-height: 45px;" />
-                                        <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" style="max-height: 45px; padding-left: 20px;" />
+                                        <a href="https://github.com/Sam89001" target="_blank">
+                                            <img src="/Assets/images/SVGs/github-blue.svg" class="img-fluid" alt="GitHub" style="max-height: 45px;" />
+                                        </a>
+
+                                        <a href="https://www.linkedin.com/in/samuel-cole-586582229/" target="_blank">
+                                            <img src="/Assets/images/SVGs/linkedin-blue.svg" class="img-fluid" alt="LinkedIn" style="max-height: 45px; padding-left: 20px;" />
+                                        </a>
+
                                     </div>
 
                             </div>
