--- a/PortfolioProjectMVC/Views/Shared/_Layout.cshtml
+++ b/PortfolioProjectMVC/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/animations.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/popups.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PortfolioProjectMVC.styles.css" asp-append-version="true" />
 </head>
 
@@ -23,9 +24,16 @@
                     </div>
                 </div>
                 <div class="d-flex title-for-hiding" style="font-size: 1.5rem; color: var(--grey)">Front-End Developer</div>
+
                 <div class="d-flex" style="justify-content: flex-start; align-items: center;">
-                    <img src="/Assets/images/icons8-github-500.svg" alt="GitHub" style="max-height: 50px; max-width: 50px; padding: 0px;">
-                    <img src="/Assets/images/icons8-linkedin-512.svg" alt= "Linked In" style="max-height: 50px; max-width: 50px; padding: 0px;">
+                    <a href="https://github.com/Sam89001" target="_blank">
+                        <img src="/Assets/images/SVGs/github-blue.svg" alt="GitHub" style="max-height: 50px; max-width: 50px; padding: 0px;">
+                    </a>
+
+                    <a href="https://www.linkedin.com/in/samuel-cole-586582229/" target="_blank">
+                        <img src="/Assets/images/SVGs/linkedin-blue.svg" alt="Linked In" style="max-height: 50px; max-width: 50px; padding: 0px;">
+                    </a>
+
                 </div>
             </div>
         </nav>
