--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -17,12 +17,14 @@
 
 <div class="splash-page-formatting container-fluid">
 
-    <div class="section-width" style="z-index: 2; position: absolute; top: 100px; left: 40px;">
-        <h1 class="font-weight-bold name-title splash-titles" style="animation: textSlideTitles 1.8s;">Samuel Cole</h1>
-        <h2 class="font-weight-bold profession-title splash-titles" style="animation: textSlideTitles 3s;">Front End Developer</h2>
+    <div class="container-fluid" style="position: relative; max-width: 2400px;">
+        <div class="text-position">
+            <h1 class="font-weight-bold name-title splash-titles" style="animation: textSlideTitles 1.8s;">Samuel Cole</h1>
+            <h2 class="font-weight-bold profession-title splash-titles" style="animation: textSlideTitles 3s;">Front End Developer</h2>
 
-        <h2 class="font-weight-bold splash-titles" style="animation: textSlideTitles 3s;">X Number of Projects</h2>
-        <h2 class="font-weight-bold splash-titles" style="animation: textSlideTitles 3s;">X Kata on Codewars</h2>
+            <h2 class="font-weight-bold splash-titles" style="animation: textSlideTitles 3s;">X Number of Projects</h2>
+            <h2 class="font-weight-bold splash-titles" style="animation: textSlideTitles 3s;">X Kata on Codewars</h2>
+        </div>
     </div>
 
     <div class="row h-100" style="z-index: 2;">
