--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -325,11 +325,11 @@
 
                     <div class="section col-md-6 margin-remover">   
 
-                            <div class="project-image-size top-image" id="project-images" onclick="loadPopUp()">
+                            <div class="left-side project-image-size top-image" id="project-images" onclick="loadPopUp()">
                                 <img class="img-fluid image-styles rotate-top" src="/Assets/images/Placeholders/amogus.jpg" id="topImage">
                             </div>
 
-                            <div class="project-image-size bottom-image" id="project-images" onclick="loadPopUp()">
+                            <div class="left-side project-image-size bottom-image" id="project-images" onclick="loadPopUp()">
                                 <img class="img-fluid image-styles rotate-bottom" src="/Assets/images/Placeholders/pepe.jpg" id="bottomImage">
                             </div>
                         
@@ -402,18 +402,17 @@
                     </div>
 
                     <div class="section col-md-6 order-1 order-md-2 margin-remover">
-                        <div class="project-image-size" style="margin-left: auto">
 
-                            <div class="project-image-size top-image" id="project-images">
-                                <img class="img-fluid image-styles rotate-top" src="/Assets/images/Placeholders/amogus.jpg" id="top-image">
-                            </div>
-
-                            <div class="project-image-size bottom-image" id="project-images">
-                                <img class="img-fluid image-styles rotate-bottom" src="/Assets/images/Placeholders/pepe.jpg" id="bottom-image">
-                            </div>
-                        
+                        <div class="right-side project-image-size top-image" id="project-images" onclick="loadPopUp()">
+                            <img class="img-fluid image-styles right-rotate-top" src="/Assets/images/Placeholders/amogus.jpg" id="topImage">
                         </div>
+
+                        <div class="right-side project-image-size bottom-image" id="project-images" onclick="loadPopUp()">
+                            <img class="img-fluid image-styles right-rotate-bottom" src="/Assets/images/Placeholders/pepe.jpg" id="bottomImage">
+                        </div>
+                    
                     </div>
+                
                 </div>
            </div>
 
@@ -422,11 +421,11 @@
 
                     <div class="section col-md-6 margin-remover">
 
-                        <div class="project-image-size top-image" id="project-images" onclick="loadPopUp()">
+                        <div class="left-side project-image-size top-image" id="project-images" onclick="loadPopUp()">
                             <img class="img-fluid image-styles rotate-top" src="/Assets/images/Placeholders/amogus.jpg" id="topImage">
                         </div>
 
-                        <div class="project-image-size bottom-image" id="project-images" onclick="loadPopUp()">
+                        <div class="left-side project-image-size bottom-image" id="project-images" onclick="loadPopUp()">
                             <img class="img-fluid image-styles rotate-bottom" src="/Assets/images/Placeholders/pepe.jpg" id="bottomImage">
                         </div>
 
