--- a/PortfolioProjectMVC/wwwroot/css/site.css
+++ b/PortfolioProjectMVC/wwwroot/css/site.css
@@ -591,11 +591,19 @@ body {
     max-height: 500px;
 }
 
-.project-block-margins {
-    margin-bottom: 100px;
+.project-border {
+    border-bottom: 2px solid var(--blue);
 }
 
+
+
 @media (min-width: 1401px) {
+
+    .project-block-margins {
+        padding-top: 100px;
+        padding-bottom: 50px;
+    }
+
     .project-block-formatting {
         min-height: 500px;
     }
@@ -611,9 +619,24 @@ body {
         left: 25px;
         margin-right: 30px;
     }
+
+    .project-text {
+        font-size: 22px;
+    }
+
+    .project-titles,
+    .technology-titles {
+        font-size: 45px;
+        font-weight: 600;
+    }
 }
 
 @media (max-width: 1400px) {
+    .project-block-margins {
+        padding-top: 50px;
+        padding-bottom: 0px;
+    }
+
     .project-block-formatting {
         min-height: 450px;
         
@@ -630,9 +653,25 @@ body {
         left: 25px;
         margin-right: 30px;
     }
+
+    .project-text {
+        font-size: 18px;
+    }
+
+    .project-titles,
+    .technology-titles {
+        font-size: 40px; 
+    }
+
 }
 
 @media (max-width: 1100px) {
+
+    .project-block-margins {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
 
     .project-image-size {
         position: relative;
@@ -646,9 +685,23 @@ body {
         margin-right: 0px;
     }
 
+    .project-text {
+        font-size: 16px;
+    }
+
+    .project-titles,
+    .technology-titles {
+        font-size: 35px;
+    }
+
 }
 
 @media (max-width: 767px) {
+    .project-block-margins {
+        padding-top: 100px;
+        padding-bottom: 400px;
+    }
+
     .project-block-formatting {
         min-height: 800px;
     }
@@ -662,17 +715,44 @@ body {
         display: none;
         visibility: hidden;
     }
+
+    .project-text {
+        font-size: 20px;
+    }
+
+    .project-titles,
+    .technology-titles {
+        font-size: 40px;
+    }
 }
 
 @media (max-width: 550px) {
     .project-block-formatting {
         min-height: 700px;
     }
+
+    .project-text {
+        font-size: 20px;
+    }
+
+    .project-titles,
+    .technology-titles {
+        font-size: 40px;
+    }
 }
 
 @media (max-width: 425px) {
     .project-block-formatting {
         min-height: 650px;
+    }
+
+    .project-text {
+        font-size: 18px;
+    }
+
+    .project-titles,
+    .technology-titles {
+        font-size: 35px;
     }
 }
 
@@ -691,15 +771,9 @@ body {
     box-shadow: 10px 10px 15px rgba(0,0,0,0.4);
 }
 
-.project-image-size .rotate-top,
-.project-image-size .rotate-bottom {
-    transition: transform 0.3s ease-in-out;
-}
-
 /*text css*/
 
 @media (min-width: 701px) {
-    
 
     .project-text-section-size {
         min-width: 200px;
@@ -714,26 +788,25 @@ body {
     }
 }
 
-.project-titles {
+.project-titles,
+.technology-titles {
     margin-bottom: 20px;
-    color: var(--grey)
+    font-weight: 600;
+}
+
+.project-titles {
+    color: var(--grey);
 }
 
 .technology-titles {
-    margin-bottom: 10px;
-    color: var(--blue)
+    color: var(--blue);
 }
 
 .project-text {
-    margin-bottom: 20px;
+    color: var(--grey);
+    margin-bottom: 40px;
 }
 
-@media (min-width: 768px) {
-    .col-md-1_5 {
-        flex: 0 0 12.5%;
-        max-width: 12.5%;
-    }
-}
 
 /* About Me Section*/
 
